fix flickering white on page load / reload

--- a/torchci/styles/globals.css
+++ b/torchci/styles/globals.css
@@ -114,6 +114,8 @@ html {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 
 h1 {
@@ -125,7 +127,6 @@ body {
   padding: 5px;
   background-color: var(--background-color);
   color: var(--text-color);
-  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 a {
